# comics-upscale

./: .gitignore  README.md  config.yaml  dev.md  generate_all_ui2py.py  lang.ps1  main.spec  pyproject.toml  ui.ps1
app/: ItemStateWorker.py  MainWindow.py  ReservationThread.py  UpscaleItem.py  main.py  resources_rc.py
app/constant/: SettingEnum.py
app/lib/: Config.py  QToaster.py
app/ui/: Item.ui  MainWindow.ui  UpscaleItem.ui  resources.qrc  ui_Item.py  ui_MainWindow.py  ui_UpscaleItem.py
app/util/: Config.py  ImageOptimize.py  Unzip.py  Upscaler.py  Zip.py  message.py
lang/: ko_KR.qm  ko_KR.ts
