[tool.poetry]
name = "namyeoju"
version = "0.1.0"
description = ""
authors = ["gyuha <nicegyuha@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
PySide6 = "^6.3.2"
PyYAML = "^6.0"
Pillow = "^9.2.0"
pyinstaller = "^5.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
